<resources>
    <string name="app_name">islandRush</string>
    <string name="Enter_players_name">Enter players name</string>
    <string name="enter_race">Enter Race</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="control_type">Control type</string>
    <string name="joystick">Joystick</string>
    <string name="button_pad">Button Pad</string>
    <string name="escapeHash">EscapeHash</string>
    <string name="cameraview">cameraView</string>
    <string name="islandrush">IslandRush</string>
    <string name="palm_image">palm image</string>
    <string name="car_image">car image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="playerName">Name</string>
    <string name="no_4">4</string>
    <string name="no_5">5</string>
    <string name="title_activity_leaderboard12">Leaderboard1_2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="swipe"><![CDATA[<< Swipe >>]]></string>
    <string name="swipe2"><![CDATA[<< Swipe]]></string>
    <string name="click_on_quot_enter_race_quot_to_start_the_game">Click on \"ENTER RACE\" \n to start the Game. \n Remember to insert a player name first. </string>

</resources>