<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controlChoice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dynamic_list"
    tools:context=".activityClasses.ControlChoice">

    <TextView
        android:id="@+id/titleControlChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/control_type"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/raceMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/button_joystick"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/main_buttons"
        android:text="@string/joystick"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_control"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/main_buttons"
        android:text="@string/button_pad"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/controlChoice_escapeHash"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/escapeHash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/raceMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="Race Mode    "
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:thumb="@drawable/thumb"
        app:layout_constraintBottom_toTopOf="@+id/modeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:track="@drawable/track" />

    <TextView
        android:id="@+id/modeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:textAppearance="?android:attr/text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_joystick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>